# eruov

eru/: .env.development  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
eru/src/: App.css  App.tsx  index.css
eru/src/api/: profileApi.ts  request.ts
eru/src/api/account/: login.ts  register.ts
eru/src/api/profile/: profileApi.ts  profileRegister.ts
eru/src/components/: CountButtonCard.tsx  CountCard.css  CountCard.tsx  EventCard.tsx  KeyTestCard.tsx  ListTodoCard.tsx  NameCard.tsx  ProfileCard.css  ProfileCard.tsx  ReducerTest.tsx
eru/src/components/account/: LoginForm.css  LoginForm.tsx  ProfileBlock.tsx  ProfileEditForm.tsx  RegisterForm.css  RegisterForm.tsx
eru/src/components/base/: ButtonUp.tsx  (+6 more)
eru/src/contexts/: ThemeContextProvider.tsx
eru/src/pages/: Api.tsx  Counter.tsx  Layout.module.css  Layout.tsx  Test.tsx
eru/src/utils/: AuthGuard.tsx  device.ts  hash_crypto.ts
ov/: README.md  main.py  pyproject.toml
ov/src/: .env  main.py
ov/src/core/: config.py  fernet_key.key
ov/src/cruds/: account.py  register.py
ov/src/dependencies/: cache_penetration.py  config.py  database.py  dependency_test.py  main.py  oauth2test.py  verify_token.py
ov/src/models/: Account.py  Base.py  Profile.py  Register.py  User.py  profiles.py
ov/src/schemas/: account.py  profile.py  register.py
ov/src/services/: router.py
ov/src/services/endpoints/: account.py  profile.py  register.py
ov/src/tests/: annotated_test.py  main.py
ov/src/utils/: bloom_filter.py  jwt_generator.py  key_generator.py  password_hash.py  storage.py
(+17 files in other folders)
